Estructura Monorepo: Frontend + Backend Spring Boot

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Ignorar compilados de Java en la carpeta backend
+backend/target/
+backend/**/*.class
+backend/.mvn/
+backend/mvnw
+backend/mvnw.cmd
+backend/.idea/
+backend/*.iml
